# GAME-ACTION-Kobo_Deluxe

./: 501  ChangeLog  Makefile.am  Makefile.in  README  README.jp  README.md  TODO  aclocal.m4  aconfig.h  aconfig.h.in  cfg-release  cfg-work  cfgform.cpp  cfgform.h  cfgparse.cpp  cfgparse.h  config.h  configure  configure.in  enemies.cpp  enemies.h  enemy.cpp  filemap.cpp  form.cpp  form.h  game.cpp  game.h  gamectl.cpp  gamectl.h  gamestate.cpp  gamestate.h  kobo.cpp  kobo.h  manage.cpp  manage.h  map.cpp  map.h  myship.cpp  myship.h  (+14 more)
data/: Makefile.am  Makefile.in  aguitar2.agw  ballad1.agw  ballad1.mid  banjo1.agw  bassdrum1.agw  bassdrum10.agw  bassdrum2.agw  bassdrum3.agw  bassdrum4.agw  bassdrum6.agw  bassdrum7.agw  bassdrum8.agw  bassdrum9.agw  beam.raw  bigship.pcx  bomb.raw  bongo1.agw  brass1.agw  bubble.raw  bullets.pcx  claps2.agw  crash1.agw  cymbal1.agw  cymbal2.agw  cymbal3.agw  cymbal4.agw  edge1.agw  edit.agw  elecbass1.agw  elecbass2.agw  elecbass3.agw  elecbass4.agw  elecbass5.agw  enemym.raw  expl.raw  expl2.raw  expl3.raw  fine.raw  (+52 more)
eel/: Makefile.in  e_builtin.c  e_getargs.c  e_lexer.c  e_script.c  e_script.h  e_symtab.c  e_util.c  e_util.h  eel.c  eel.h
graphics/: Makefile.am  Makefile.in  cs.c  cs.h  display.cpp  display.h  gfxengine.cpp  gfxengine.h  glSDL.c  glSDL.h  sofont.cpp  sofont.h  sprite.c  sprite.h  toolkit.cpp  window.cpp  window.h
sound/: Makefile.am  Makefile.in  a_agw.c  a_agw.h  a_bus.c  a_channel.c  a_commands.c  a_commands.h  a_delay.c  a_events.c  a_globals.h  a_midi.c  a_midicon.c  a_midifile.c  a_midisock.c  a_mixers.h  a_patch.c  a_patch.h  a_pitch.c  a_plugin.c  a_tools.h  a_types.h  a_voice.c  a_voice.h  a_wave.c  a_wave.h  a_wca.c  audio.c  audio.h  audiodev.c
